tests/ui/parser/keyword-type-as-identifier.stderr
error: expected identifier, found keyword `type`
  --> $DIR/keyword-type-as-identifier.rs:4:9
   |
LL |     let type = "foo";
   |         ^^^^ expected identifier, found keyword
   |
help: escape `type` to use it as an identifier
   |
LL |     let r#type = "foo";
   |         ++

error: aborting due to 1 previous error

