tests/ui/parser/keyword-type-as-identifier.rs
// This file was auto-generated using 'src/etc/generate-keyword-tests.py type'

fn main() {
    let type = "foo"; //~ error: expected identifier, found keyword `type`
}
